--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </section>
 
         <section style="margin-top: 3rem;">
-            <h2 class="section-title">📚 เรียนรู้เพิ่มเติม</h2>
+            <h2 class="section-title"> เรียนรู้เพิ่มเติม</h2>
             <div class="grid">
                 <a href="culture.html" style="text-decoration: none; color: inherit;">
                     <div class="card">
@@ -212,7 +212,7 @@
         </section>
 
         <section style="margin-top: 3rem; background: #faf7f2; padding: 2rem; border-radius: 8px;">
-            <h2 class="section-title" style="margin-top: 0;">🏛️ ประวัติศาสตร์ล้านนา</h2>
+            <h2 class="section-title" style="margin-top: 0;"> ประวัติศาสตร์ล้านนา</h2>
             <p>อาณาจักรล้านนา คืออดีตราชอาณาจักรทางภาคเหนือตอนบนของไทย ก่อตั้งโดย พญามังราย เมื่อ พ.ศ. 1839 มีศูนย์กลางที่เชียงใหม่ เจริญรุ่งเรืองถึงขีดสุดในสมัยพระเจ้าติโลกราช (พ.ศ. 1985–2030) มีอารยธรรม ภาษา และตัวอักษรเป็นของตนเอง 
                 ต่อมาตกเป็นเมืองขึ้นของพม่าและถูกรวมเข้ากับสยามในสมัยรัตนโกสินทร์  </p>
         </section>
@@ -222,4 +222,5 @@
         <p>&copy; 2026 วัฒนธรรมล้านนา | สงวนลิขสิทธิ์</p>
     </footer>
  </body>
+
  </html>
