--- a/food.html
+++ b/food.html
@@ -145,7 +145,7 @@
 
     <div class="container">
         <section id="food">
-            <h2 class="section-title">🍲 อาหารล้านนา</h2>
+            <h2 class="section-title"> อาหารล้านนา</h2>
             <div class="content-section">
                 <p>อาหารล้านนามีรสชาติเด่นที่ใช้เครื่องแต่งรสที่ลงตัว ผสมผสานระหว่างความเผ็ด เค็ม เปรี้ยว หวาน กลมกลืนกันอย่างสวยงาม แต่ละอาหารสะท้อนภูมิปัญญาของชาวล้านนาและวิธีการใช้ประโยชน์จากสิ่งแวดล้อมที่มี</p>
             </div>
@@ -195,7 +195,7 @@
             </div>
 
             <section style="margin-top: 3rem; background: #faf7f2; padding: 2rem; border-radius: 8px;">
-                <h3 style="color: #8B4513; margin-bottom: 1rem; font-size: 1.5rem;">🥘 เครื่องปรุงเด่นของอาหารล้านนา</h3>
+                <h3 style="color: #8B4513; margin-bottom: 1rem; font-size: 1.5rem;"> เครื่องปรุงเด่นของอาหารล้านนา</h3>
                 <p style="margin-bottom: 1rem;">เครื่องปรุงที่ใช้ในอาหารล้านนามักเป็นสมุนไพรและวัสดุธรรมชาติที่หาได้ในท้องถิ่น ได้แก่:</p>
                 <ul style="margin-left: 2rem;">
                     <li><strong>พริกแห้ง:</strong> เป็นส่วนประกอบสำคัญที่ให้ความเผ็ดและเก้อแก่อาหาร</li>
@@ -213,3 +213,4 @@
     </footer>
 </body>
 </html>
+
