--- a/festivals.html
+++ b/festivals.html
@@ -144,7 +144,7 @@
 
     <div class="container">
         <section id="festival">
-            <h2 class="section-title">🎆 เทศกาลและงานวัฒนธรรม</h2>
+            <h2 class="section-title"> เทศกาลและงานวัฒนธรรม</h2>
             <div class="content-section">
                 <p>เทศกาลของชาวล้านนาเต็มไปด้วยสีสันและความศรัทธา เป็นโอกาสที่ชาวบ้านรวมตัวกันเพื่อแสดงออกถึงการบูชาพระ รำลึกถึงกรรมหลักขององค์ขององค์ชาติ และแสดงความเป็นครอบครัวที่ยืนหนึ่ง</p>
             </div>
@@ -174,7 +174,7 @@
         </section>
 
         <section id="craft">
-            <h2 class="section-title">🎨 ศิลปะหัตถกรรมล้านนา</h2>
+            <h2 class="section-title"> ศิลปะหัตถกรรมล้านนา</h2>
             <div class="content-section">
                 <p>ศิลปะและหัตถกรรมล้านนาเป็นมรดกทางวัฒนธรรมที่ยิ่งใหญ่ สืบทอดมาจากบรรพบุรุษเมื่อหลายศตวรรษที่แล้ว ศิลปีล้านนามีพรสวรรค์เดือดเดือดและความรักต่องานศิลป์ แต่ละชิ้นงานเป็นการบ่มเพาะภูมิปัญญาท้องถิ่น</p>
             </div>
@@ -230,3 +230,4 @@
     </footer>
 </body>
 </html>
+
