--- a/culture.html
+++ b/culture.html
@@ -166,7 +166,7 @@
 
     <div class="container">
         <section id="culture">
-            <h2 class="section-title">🎭 วัฒนธรรมและประเพณี</h2>
+            <h2 class="section-title"> วัฒนธรรมและประเพณี</h2>
             <div class="content-section">
                 <h3 style="color: #8B4513; margin-bottom: 1rem;">คุณลักษณะสำคัญของวัฒนธรรมล้านนา</h3>
                 <ul>
@@ -237,3 +237,4 @@
     </footer>
 </body>
 </html>
+
