--- a/contact.html
+++ b/contact.html
@@ -188,33 +188,33 @@
 
     <div class="container">
         <section id="contact">
-            <h2 class="section-title">📞 ข้อมูลติดต่อ</h2>
+            <h2 class="section-title"> ข้อมูลติดต่อ</h2>
             <div class="content-section">
                 <p>ขอบคุณที่สนใจเรียนรู้เกี่ยวกับวัฒนธรรมล้านนา หากคุณมีคำถามหรือความเห็นอื่นๆ สามารถติดต่อเราได้ที่</p>
             </div>
 
             <div class="contact-info">
                 <div class="info-box">
-                    <h3>📧 อีเมล</h3>
+                    <h3> อีเมล</h3>
                     <p>67143123@cmru.ac.th</p>
                 </div>
                 <div class="info-box">
-                    <h3>☎️ โทรศัพท์</h3>
+                    <h3> โทรศัพท์</h3>
                     <p>โทรศัพท์: 063-903-1715</p>
                 </div>
             </div>
             <div>
             </div>
-            <h2 class="section-title">ℹ️ เกี่ยวกับเรา</h2>
+            <h2 class="section-title"> เกี่ยวกับเรา</h2>
             <div class="content-section">
                 <p>เว็บไซต์วัฒนธรรมล้านนา เป็นแหล่งข้อมูลเกี่ยวกับวัฒนธรรม ประเพณี อาหาร และศิลปะหัตถกรรมของชาวล้านนาและเชียงใหม่</p>
                 
                 <p>เรามีวัตถุประสงค์เพื่อ:</p>
                 <ul style="margin-left: 2rem; margin-top: 1rem;">
-                    <li>📚 อนุรักษ์และเผยแพร่วัฒนธรรมล้านนาให้คนรุ่นต่อไปรู้จัก</li>
-                    <li>🌍 แนะนำวัฒนธรรมล้านนาให้มีความรู้จักในระดับสากล</li>
-                    <li>🎨 ส่งเสริมศิลปะและหัตถกรรมพื้นบ้านของล้านนา</li>
-                    <li>👥 สร้างชุมชนของผู้ที่รักษ์วัฒนธรรมล้านนา</li>
+                    <li> อนุรักษ์และเผยแพร่วัฒนธรรมล้านนาให้คนรุ่นต่อไปรู้จัก</li>
+                    <li> แนะนำวัฒนธรรมล้านนาให้มีความรู้จักในระดับสากล</li>
+                    <li> ส่งเสริมศิลปะและหัตถกรรมพื้นบ้านของล้านนา</li>
+                    <li> สร้างชุมชนของผู้ที่รักษ์วัฒนธรรมล้านนา</li>
                 </ul>
 
                 <p style="margin-top: 2rem;">เราเชื่อว่าวัฒนธรรมล้านนาเป็นมรดกอันล้ำค่าที่ควรค่าแก่การศึกษาและการอนุรักษ์ เพื่อให้คนรุ่นต่อไปสามารถเข้าใจและชื่นชมความงามของศิลปะและวัฒนธรรมนี้ต่อไป</p>
@@ -222,7 +222,7 @@
         </section>
 
         <section style="margin-top: 3rem; background: white; padding: 2rem; border-radius: 8px; border: 2px solid #D2691E;">
-            <h2 class="section-title" style="margin-top: 0;">🤝 ติดตาม</h2>
+            <h2 class="section-title" style="margin-top: 0;"> ติดตาม</h2>
             <p style="font-size: 1.05rem; color: #555;">เข้าร่วมโลกโซเชียลมีเดียของเราเพื่อรับข้อมูลข่าวสารใหม่และศิลปะ</p>
             <div style="margin-top: 1.5rem; text-align: center;">
                 <p style="color: #8B4513; font-weight: bold;">Facebook: ฟ'ฟลุ๊ก | Instagram: @ff_n_a.05  </p>
@@ -235,3 +235,4 @@
     </footer>
 </body>
 </html>
+
