--- a/food.html
+++ b/food.html
@@ -153,7 +153,7 @@
                 <div class="card">
                     <div class="card-img"><img src="oo11.jpg" alt="เทศกาลล้านนา" style="width: 100%; height: auto; "></div>
                     <div class="card-content">
-                        <h3>ขาวซอย</h3>
+                        <h3>ข้าวซอย</h3>
                         <p>อาหารสุดชื่นชอบของชาวเชียงใหม่ ขนมจีนราดด้วยน้ำพริกแกงและขนมจีนเกรียบ รสชาติหลากหลายและสมดุล ยอดนิยมอาหารเช้าของชาวเมืองเชียงใหม่</p>
                     </div>
                 </div>
@@ -213,4 +213,5 @@
     </footer>
 </body>
 </html>
+
 
